# A-CA

./: CMakeLists.txt  README.md  ~$чет Гущин Александр 381706-2.docx  Отчет Гущин Александр 381706-2.docx
convex_hull_lib/: CMakeLists.txt  convex_hull.cpp  convex_hull.h  point.cpp  point.h
convex_hull_main/: CMakeLists.txt  main.cpp
d_heap_sort_lib/: CMakeLists.txt  d_heap_sort.h
d_heap_sort_main/: CMakeLists.txt  main.cpp
